Se añadio nuevas imagenes y se mejoro los estilos de ciertas caracteristicas de la pagina inicio

--- a/INICIO.html
+++ b/INICIO.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HARDCORE GYM</title>
-    <link rel="stylesheet" href="CSS/INICIO.css">
 
     <!--Libreria de Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
+<link rel="stylesheet" href="CSS/INICIO.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <body>
     <div class="container-border">
@@ -21,7 +23,7 @@
         </div>
         <div class="row" id="fila2">
             <div class="col-md-3 col-sm-4" id="fila2izquierda">
-                <img src="IMG/LOGO_HARDCORE-removebg-preview.png" id="logo" alt="">
+                <img src="IMG/logo.png" id="logo" alt="">
             </div>
             <div class="col-md-6 col-sm-4" id="fila2medio">
                 <input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio">
@@ -44,28 +46,31 @@
             <div class="col-md-12" id="cuerpocompleto">
                 <h1 id="Bienvenido">Bienvenido</h1>
                 <p class="texto">Nosotros somos HARDCORE GYM, somos una cadena de gimnasio que lleva mas de 12 años
-                    dentro del mundo
-                    de la actividad físca, dedicandonos a mantenerte saludable, y que mejor que la actividad física.</p>
+                    dentro del mundo de la <br> actividad físca, dedicandonos a mantenerte saludable, y que mejor 
+                    que la actividad física.</p>
                 <p class="texto">Nuestra familia cada vez crece más, actualmente somos mas de 50,000 afiliados a
-                    nuestros gimnasios, busca tu sucursal más cercana y se parte de esta gran familia!!</p>
+                    nuestros gimnasios, busca tu sucursal <br> más cercana y se parte de esta gran familia!!</p>
             </div>
             <hr/>
             <div class="row" id="cuerpomedio">
                 <div class="col-md-12" id="cuerpocompleto">
-                    <img src="IMG/gym.webp" id="imggym">
+                    <img src="IMG/gym2.png" id="imggym">
+                    <br><br>
                     <hr id="barra1">
                     <hr id="barra2">
                 </div>
             </div>
             <div class="row" id="cuerpomedio">
                 <div class="col-md-12" id="cuerpocompleto">
+                    <br>
                     <input type="button" value="Encuentra el mejor plan para ti" id="mejorplan">
                 </div>
             </div>
             <div class="row" id="cuerpomedio">
                 <div  class="col-md-3"></div>
                 <div class="col-md-6" id="cuerpocompleto" >
-                    <table>
+                    <br>
+                    <table id = "tabla">
                         <tr>
                             <td></td>
                             <td>Plan básico</td>
@@ -102,6 +107,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
+                    <br><br>
                     <p id="promocion">Promocion</p>
                 </div>
             </div>
@@ -111,6 +117,7 @@
                             <h5 class="titulotar"><span class="titulotarjeta">Plan basico</span></h5>
                                 <div class="contenidotar">
                                     <ul><span class="Incluye">Inlcuye:</span>
+                                        <br><br>
                                         <li class="txt1">Zona 1 y 2 libres.</li>
                                         <br><br>
                                         <li class="txt2">Cuarto de masajes</li>
@@ -125,6 +132,7 @@
                         <h5 class="titulotar"><span class="titulotarjeta">Plan Completo</span></h5>
                             <div class="contenidotar">
                                 <ul><span class="Incluye">Inlcuye:</span>
+                                    <br><br>
                                     <li class="txt1">Zona 1 y 2 libres.</li>
                                     <br>
                                     <li class="txt2">Cuarto de masajes</li>
@@ -143,6 +151,7 @@
                         <h5 class="titulotar"><span class="titulotarjeta">Plan Plus</span></h5>
                             <div class="contenidotar">
                                 <ul><span class="Incluye">Inlcuye:</span>
+                                    <br>
                                     <li class="txt1">Zona 1 y 2 libres.</li>
                                     <br>
                                     <li class="txt2">Cuarto de masajes</li>
@@ -181,14 +190,23 @@
     <div class="container-border" id="footer">
         <div class="row">
             <div class="col-md-12" id="footerlogo">
-                <img id="logopt2" src="IMG/LOGO_HARDCORE-removebg-preview.png" alt="">
+                <img id="logopt2" src="IMG/logo.png" alt="">
             </div>
-            <hr/>
+            <hr id = "linea1"/>
             <div class="col-md-12" id="footerlogo">
-                <p>SIGUENOS</p>
-                <hr/>
+                <p id = "siguenos">SIGUENOS</p>
+                <section class = "footer">
+                    <div class = "social">
+                        <a href="#"><i class ="fab fa-instagram"></i></fa-instagram></a>
+                        <a href="#"><i class ="fab fa-facebook-f"></i></fa-facebook></a>
+                        <a href="#"><i class ="fab fa-twitter"></i></fa-instagram></a>
+                        <a href="#"><i class ="fab fa-snapchat"></i></fa-instagram></a>
+                    </div>
+                </section>
+                <hr id = "linea2"/>
             </div>
-            <div class="col-md-12">
+            <div id = "terminos" class="col-md-12">
+                <br>
                 <h5>Terminos y condiciones generales</h5>
                 <ul>
                     <li>LAS PROMOCIONES NO SON TRASFERIBLES A TERCEROS</li>
@@ -197,13 +215,9 @@
                     <li>NO SE ADMITIRA EL ACCESO A MENORES DE 12 AÑOS, QUIENES POR NORMATIVIDAD LEGAL NO LO TENGAN PERMITIDO</li>
                 </ul>
             </div>
+            <br>
         </div>
     </div>
-
-
-
-
-
 
     <!--Libreria de Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
