Se añadio la pagina de REGISTRO y se actualizo algunos estilos de las demas pagina

--- a/SESION.html
+++ b/SESION.html
@@ -13,7 +13,8 @@
     <body>
         <div id = "caja2">
             <div id = "caja1">
-                <p id = "sesion"><img id = "logo" src="./IMG/logo.png" alt="">INICIAR SESIÓN</p>
+                <img id = "logo" src="./IMG/logo.png" alt="">
+                <p id = "sesion">INICIAR SESIÓN</p>
             </div>
 
             <br>
