--- a/INICIO.html
+++ b/INICIO.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HARDCORE GYM</title>
+    <title>INICIO</title>
 
     <!--Libreria de Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-
-<link rel="stylesheet" href="CSS/INICIO.css">
+        <link rel="stylesheet" href="CSS/INICIO.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
+</head>
 <body>
     <div class="container-border">
         <div class="row">
@@ -26,16 +25,16 @@
                 <img src="IMG/logo.png" id="logo" alt="">
             </div>
             <div class="col-md-6 col-sm-4" id="fila2medio">
-                <input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio">
-                <input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda">
-                <input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales">
-                <input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!">
+                <a href="INICIO.html"><input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio"></a>
+                <a href="TIENDA.html"><input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda"></a>
+                <a href="SUCURSALES.html"><input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales"></a>
+                <a href="CONOCENOS!.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
             </div>
             <div class="col-md-3 col-sm-4" id="fila2derecha">
                 <input type="text" placeholder="Que estas buscando?" id="search-box">
                 <div>
-                    <input type="button" class="btn-usuario" id="btn-registrarse" value="Registrate">
-                    <input type="button" class="btn-usuario" id="btn-iniciarsesion" value="Iniciar Sesión">
+                    <a href="REGISTRO.html"><input type="button" class="btn-usuario" id="btn-registrarse" value="Registrate"></a>
+                    <a href="SESION.html"><input type="button" class="btn-usuario" id="btn-iniciarsesion" value="Iniciar Sesión"></a>
                 </div>
             </div>
         </div>
@@ -224,5 +223,4 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
