Se añadio la pestaña de pago y se modifico algunas caractristicas de SESION.html

--- a/SESION.html
+++ b/SESION.html
@@ -31,7 +31,7 @@
                 </select>
           </form>
             <br>
-            <p id = "redireccion">¿No tienes cuenta? <a href="">Cree una</a></p>
+            <p id = "redireccion">¿No tienes cuenta? <a href="">Crea una</a></p>
             <button type="button" class="btn btn-primary">Siguiente</button>
         </div>
 
