Se añadio la pestaña Conocenos, y se agregaron imagenes

--- a/CONOCENOS.html
+++ b/CONOCENOS.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+    <!--Encabezado-->
     <div class="container-border">
         <div class="row">
             <div class="col-sm-12">
@@ -39,7 +40,41 @@
         </div>
     </div>
     </div>
-    
+
+    <!--Informacion-->
+    <!--Imagen con texto superpuesto-->
+    <img id="gym" src="./IMG/gym.jpg" alt="">
+    <div class="texto-superpuesto">
+        <h1>Conocenos!</h1>
+        <p id = "name">HARDCOREGYM,</p>
+        <p>llego a México en el 2021, y fue creado con el propósito de entregar 
+        fitness de alta calidad para todos, en un ambiente comódo y sin presiones</p>
+    </div>
+    <br><br><br><br>
+    <!--Informacion debajo de la imagen-->
+    <div id="contenedor">
+        <div>
+            <img id = "icono" src="./IMG/icono1.jpg" alt="">
+            <br><br>
+            <h2>FACILIDADES</h2>
+            <br>
+            <p class = "texto">Transformamos lo complicado <br>en simple, pensando en tu <br>comodidad,
+            contamos con <br>diferentes servicios online <br>como inscripción, transferencia <br>de unidad,
+            etc. Así como <br>entrenamientos pensados para <br>que los realices de forma <br>autónoma</p>
+        </div>
+        <div>
+            <img id = "icono" src="./IMG/icono2.jpg" alt="">
+            <br><br>
+            <h2>ACCESIBILIDAD</h2>
+            <br>
+            <p class = "texto">Nuestra misión es entregar <br> fitness de alta calidad <br>haciendola 
+            accesible para <br>todos. Es por eso que todos <br>nuestros gimnasios cuentan <br>con la 
+            tecnología e <br>instalaciones adecuadas para <br>satisfacer las necesidades de <br>nuestros usuarios.</p>
+        </div>
+    </div>
+    <br><br><br>
+
+    <!--Seccion terminos y condiciones-->
     <div class="container-border" id="footer">
         <div class="row">
             <div class="col-md-12" id="footerlogo">
