Se avanzo la pestaña de SUCURSALES e INICIO_ADMIN

--- a/TIENDA.html
+++ b/TIENDA.html
@@ -27,7 +27,7 @@
                 <a href="INICIO.html"><input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio"></a>
                 <a href="TIENDA.html"><input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda"></a>
                 <a href="SUCURSALES.html"><input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales"></a>
-                <a href="CONOCENOS!.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
+                <a href="CONOCENOS.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
             </div>
             <div class="col-md-3 col-sm-4" id="fila2derecha">
                 <input type="text" placeholder="Que estas buscando?" id="search-box">
