--- a/SUCURSALES.html
+++ b/SUCURSALES.html
@@ -8,11 +8,14 @@
 
     <!--Libreria de Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="CSS/SUCURSALES.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
+
+<link rel="stylesheet" href="CSS/SUCURSALES.css">
+
 <body>
+    <!--Encabezado-->
     <div class="container-border">
         <div class="row">
             <div class="col-sm-12">
@@ -27,7 +30,7 @@
                 <a href="INICIO.html"><input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio"></a>
                 <a href="TIENDA.html"><input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda"></a>
                 <a href="SUCURSALES.html"><input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales"></a>
-                <a href="CONOCENOS!.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
+                <a href="CONOCENOS.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
             </div>
             <div class="col-md-3 col-sm-4" id="fila2derecha">
                 <input type="text" placeholder="Que estas buscando?" id="search-box">
@@ -39,7 +42,35 @@
         </div>
     </div>
     </div>
+
+    <!--Contenido de sucursales-->
+    <h1>Bienvenido</h1>
+    <hr>
+    <br><br><br>
     
+    <!--Carrousel de fotos-->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="./IMG/suc1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./IMG/suc1_2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./IMG/suc1_3.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Siguiente</span>
+        </a>
+      </div>
+    <!--Terminos y condiciones-->
     <div class="container-border" id="footer">
         <div class="row">
             <div class="col-md-12" id="footerlogo">
