--- a/SUCURSALES.html
+++ b/SUCURSALES.html
@@ -49,27 +49,95 @@
     <br><br><br>
     
     <!--Carrousel de fotos-->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="./IMG/suc1.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="./IMG/suc1_2.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="./IMG/suc1_3.jpg" alt="Third slide">
-          </div>
+    <div class="container-border">
+        <div class="row">
+            <div class="col-md-3">
+                <div id="Carrusel1" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="IMG/suc1.jpg" id="car-img1" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="IMG/suc1_2.jpg" id="car-img2" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="IMG/suc1_3.jpg" id="car-img3" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            <div class="col-md-9">
+            <div class="tarjeta-info">
+                <h5 class="tit-suc">Valle Oriente</h5>
+                <h6 class="subtit-suc">Direccion</h6>
+                <p class="car-txt">Av. Lázaro Cárdenas 100-Paseo de las Privanzas, Monterrey, NL-64750</p>
+                <h6 class="subtit-suc">Horarios</h6>
+                <p class="car-txt" id="txt-2car">Lun a Vie       6h-23h</p>
+                <p class="car-txt" id="txt-1car">Sáb             8h-18h</p>
+                <p class="car-txt">Dom/Festivos    8h-16h</p>             
+            </div>
+            </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Siguiente</span>
-        </a>
-      </div>
+    </div>
+    <!--Carrusel de fotos 2-->
+    <div class="container-border">
+        <div class="row">
+            <div class="col-md-3">
+                <div id="Carrusel1" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="IMG/suc1.jpg" id="car-img1" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="IMG/suc1_2.jpg" id="car-img2" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="IMG/suc1_3.jpg" id="car-img3" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+            <div class="col-md-9">
+            <div class="tarjeta-info">
+                <h5 class="tit-suc">Esfera</h5>
+                <h5 class="tit-suc">Fashion Hall</h5>
+                <h6 class="subtit-suc">Direccion</h6>
+                <p class="car-txt">Av. la Rioja 245 - Residencial la Rioja, Monterrey,N.L.-64985</p>
+                <h6 class="subtit-suc">Horarios</h6>
+                <p class="car-txt" id="txt-2car">Lun a Vie       6h-23h</p>
+                <p class="car-txt" id="txt-1car">Sáb             8h-18h</p>
+                <p class="car-txt">Dom/Festivos    8h-16h</p>             
+            </div>
+            </div>
+        </div>
+    </div>
+    
     <!--Terminos y condiciones-->
     <div class="container-border" id="footer">
         <div class="row">
