Se finalizo la pestaña de INICIO_ADMIN y USUARIOS_ROL

--- a/INICIO_ADMIN.html
+++ b/INICIO_ADMIN.html
@@ -29,7 +29,8 @@
                 <a href="INICIO.html"><input type="button" class="botonesdecambiodepagina" id="btn-inicio" value="Inicio"></a>
                 <a href="TIENDA.html"><input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda"></a>
                 <a href="SUCURSALES.html"><input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales"></a>
-                <a href="CONOCENOS.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
+                <a href="CONOCENOS.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a><br>
+                <a href="USUARIOS_ROL.html"><input type="button" class="botonesdecambiodepagina" id="btn-administrador" value="Administrador"></a>
             </div>
             <div class="col-md-3 col-sm-4" id="fila2derecha">
                 <input type="text" placeholder="Que estas buscando?" id="search-box">
@@ -37,9 +38,9 @@
                     <a href="REGISTRO.html"><input type="button" class="btn-usuario" id="btn-registrarse" value="Registrate"></a>
                     <a href="SESION.html"><input type="button" class="btn-usuario" id="btn-iniciarsesion" value="Iniciar Sesión"></a>
                 </div>
+                <br><br>
             </div>
         </div>
-    </div>
     </div>
     <div class="container-border" id="cuerpocompleto">
         <div class="row" id="cuerpocompleto">
