--- a/SUCURSALES.html
+++ b/SUCURSALES.html
@@ -81,6 +81,7 @@
             </div>
             <div class="col-md-9">
             <div class="tarjeta-info">
+              <img class="estrellas" src="IMG/4 estrellas.png" alt="">
                 <h5 class="tit-suc">Valle Oriente</h5>
                 <h6 class="subtit-suc">Direccion</h6>
                 <p class="car-txt">Av. Lázaro Cárdenas 100-Paseo de las Privanzas, Monterrey, NL-64750</p>
@@ -104,13 +105,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="IMG/suc1.jpg" id="car-img1" class="d-block w-100" alt="...">
+                        <img src="IMG/suc1.1.jpg" id="car-img1" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="IMG/suc1_2.jpg" id="car-img2" class="d-block w-100" alt="...">
+                        <img src="IMG/suc21.jpg" id="car-img2" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="IMG/suc1_3.jpg" id="car-img3" class="d-block w-100" alt="...">
+                        <img src="IMG/suc3.jpg" id="car-img3" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -125,6 +126,7 @@
             </div>
             <div class="col-md-9">
             <div class="tarjeta-info">
+              <img class="estrellas" src="IMG/3 estrellas.png" alt="">
                 <h5 class="tit-suc">Esfera</h5>
                 <h5 class="tit-suc">Fashion Hall</h5>
                 <h6 class="subtit-suc">Direccion</h6>
