modificacion de paginas para el uso de back-end

--- a/INICIO.html
+++ b/INICIO.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!--header-->
     <div class="container-border">
         <div class="row">
             <div class="col-sm-12">
@@ -39,7 +40,8 @@
             </div>
         </div>
     </div>
-    </div>
+    <!--Final de header-->
+    <!--Iniciod el cuerpo-->
     <div class="container-border" id="cuerpocompleto">
         <div class="row" id="cuerpocompleto">
             <div class="col-md-12" id="cuerpocompleto">
@@ -186,6 +188,8 @@
             </div>
         </div><br>
     </div>
+    <!--Final del cuerpo-->
+    <!--Inicio del footer-->
     <div class="container-border" id="footer">
         <div class="row">
             <div class="col-md-12" id="footerlogo">
@@ -217,7 +221,7 @@
             <br>
         </div>
     </div>
-
+<!--final del footer-->
     <!--Libreria de Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
