--- a/INICIO_ADMIN.html
+++ b/INICIO_ADMIN.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INICIO</title>
+    <title>INICIO-ADMIN</title>
 
     <!--Libreria de Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,6 +30,7 @@
                 <a href="TIENDA.html"><input type="button" class="botonesdecambiodepagina" id="btn-tienda" value="Tienda"></a>
                 <a href="SUCURSALES.html"><input type="button" class="botonesdecambiodepagina" id="btn-sucursales" value="Sucursales"></a>
                 <a href="CONOCENOS.html"><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Conócenos!"></a>
+                <a href=""><input type="button" class="botonesdecambiodepagina" id="btn-conocenos" value="Administrador"></a>
             </div>
             <div class="col-md-3 col-sm-4" id="fila2derecha">
                 <input type="text" placeholder="Que estas buscando?" id="search-box">
