Se añadio la pestaña de VENTAS y PLANES

--- a/SUCURSALES.html
+++ b/SUCURSALES.html
@@ -79,6 +79,7 @@
                     </button>
                   </div>
             </div>
+            <!--Informacion de sucursales-->
             <div class="col-md-9">
             <div class="tarjeta-info">
               <img class="estrellas" src="IMG/4 estrellas.png" alt="">
@@ -94,6 +95,7 @@
         </div>
     </div>
     <!--Carrusel de fotos 2-->
+    <br><br>
     <div class="container-border">
         <div class="row">
             <div class="col-md-3">
@@ -124,6 +126,7 @@
                     </button>
                   </div>
             </div>
+            <!--Informacion de sucursales-->
             <div class="col-md-9">
             <div class="tarjeta-info">
               <img class="estrellas" src="IMG/3 estrellas.png" alt="">
